misc/ingress-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress 
  namespace: argo-cd
spec:
  ingressClassName: nginx
  rules:
    - host: www.geekhub-argocd.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: argo-cd-argocd-server
                port:
                  number: 80
            path: /
