misc/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
spec:
  ingressClassName: nginx
  rules:
    - host: www.geekhub-grafana.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: grafana 
                port:
                  number: 80
            path: /
